styles/pageStyling.css
/* Page Header Start */
header {
    margin: 0;
    padding: 0;
    /*background-color: rgb(37, 36, 36);*/
    background: transparent;
}
#bannerandnav {
    background-color: rgb(37, 36, 36);
    border-bottom-left-radius: 100px;
    border-bottom-right-radius: 100px;
    box-shadow: 0px 0px 10px red;
}
#bannerandnav:hover {
    transition: box-shadow 2s ease;
    box-shadow: 0px 0px 10px yellow;
}
header img {
    padding: 0;
    margin: 15px;
    margin-top: 10px;
    margin-bottom: 0;
    overflow: hidden;
    border-radius: 50%;
    /*box-shadow: 0px 0px 10px red;*/
}
header img:hover {
    transition: box-shadow 1s ease-in-out;
    background-color: rgb(37, 36, 36);
    box-shadow: 0px 0px 10px 2px yellow;
}
header a {
    padding: 0;
    margin: 0;
}
header h1 {
    text-align: center;
    color: rgba(255, 255, 255, 0.0);
    text-shadow: 2px 1px yellow;
    font-family: 'Tangerine', cursive;
    cursor: default;
}
header ul {
    text-align: center;
    padding: 0;
    margin: 0;
    margin-top: 10px;
}
header li {
    display: inline;
    padding: 0;
    margin: 0 5px;
}
#bannerandnav a {
    color: black;
    height: auto;
    display: inline-block;
    width: 96px;
    text-decoration: none;
    padding: 5px 15px 5px 15px;
    background-color: goldenrod;
    border-radius: 20px;
}
#bannerandnav a:hover {
    color: yellow;
    background-color: purple;
}
#bannerandnav a:active {
    text-shadow: 1px 1px 1px red;
    background-color: purple;
}
#bannerandnav .current {
    color: yellow;
    background-color: purple;
}
/* Page Header End */


/* Page Main Content Start */
body {
    background-color: rgb(51, 48, 48);
    color: white;
    font-family: 'Times New Roman', Times, serif;
    background-image: url(../images/transcircle.svg), url(../images/smoke.svg);
    background-size: 100vh, auto;
    background-position: -33vw 0vh, 65vw 0vh;
    background-repeat: no-repeat;
    background-attachment: fixed;
}
.content {
    letter-spacing: 1.2;
}
h2 {
    font-size: 2rem;
    color: white;
    border: none;
    padding: 0;
    margin: 20px;
    border-bottom: 0;
    text-align: center;
    text-shadow: inherit;
}
h2:nth-of-type(1) {
    font-size: 3rem;
}
h2:hover {
    border-bottom-color: yellow;
}
h3 {
    font-size: 1.7rem;
    color: white;
    border: none;
    padding: 0;
    margin: 20px;
    margin-bottom: 2px;
    border-bottom: 0;
    text-shadow: inherit;
}
h3:hover {
    border-bottom-color: yellow;
}
.wrap {
    margin: 0;
    border-top: 2px solid red;
}
.wrap:hover {
    border-top-color: yellow;
}
.topic {
    text-shadow:  0px 0px 9px red;
}
.topic:hover {
    text-shadow:  0px 0px 9px yellow;
}
p {
    margin: 30px;
    margin-top: 15px;
    padding: 5px;
    font-family: Arial, Helvetica, sans-serif;
    line-height: 1.5;
    text-shadow: none !important;
}
.first {
    margin-top: 30px;
    font-size: 1.1rem;
    letter-spacing: 1.3;
}
.first::first-letter {
    font-family: 'Tangerine';
    font-size: 2.5rem;
    font-weight: 700;
}
.first::first-line {
    line-height: 0.8;
}
.afterh2 {
    margin: 30px;
    margin-top: 30px;
}
.afterh2:first-letter {
    font-family: 'Tangerine';
    font-size: 2.5rem;
    font-weight: 700;
}
.afterh2:first-line {
    line-height: 0.8;
}
a:focus {
    outline: none;
}
.imageslider {
    margin-top: 98px;
    padding: 15px;
    padding-top: 0;
}
.container {
    width: 150px;
    height: 150px;
    margin: 5px;
    border: 2px solid red;
    border-color: inherit;
    overflow: hidden;
}
.slider {
    width: 100%;
    height: 100%;
}
.slider img {
    width: 100%;
    height: 100%;
}
.button {
    margin: 5px;
    padding: 0;
    height: 32px;
    width: 32px;
    border: 0;
    background: transparent;
}
.button:hover {
    cursor: pointer;
}
button:focus {
    outline: none;
}
.imageslider {
    border-color: red;
}
.imageslider:hover {
    border-color: yellow;
}
.buttonbar {
    margin-top: -42px;
    position: relative;
}
.buttonbar:hover {
    opacity: 0;
}
.topics {
    max-width: 952px;
    margin: 50px auto;
}
.topics .box {
    position: relative;
    margin: 0 auto 20px;
    height: 170px;
    width: 250px;
    box-sizing: border-box;
    display: inline-block;
    box-shadow: 0px 0px 10px red;
    transition: box-shadow 0.5s;
    overflow: hidden;
}
.topics .box:hover {
    box-shadow: 0px 0px 15px yellow;
}
.topics .box .imgBox {
    position: relative;
    overflow: hidden;
}
.topics .box .imgBox img {
    position: relative;
    right: 100px;
    transition: transform 2s;
}
.topics .box:hover .imgBox img {
    transform: scale(1.2);
}
.topics .box .details {
    position: absolute;
    top: 10px;
    left: 10px;
    bottom: 10px;
    right: 10px;
    background: rgba(0, 0, 0, 0.8);
    transform: scaleX(0);
    transition: transform 0.5s;
}
.topics .box:hover .details {
    transform: scaleX(1);
}
.topics .box .details .topicontent {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    text-align: center;
    padding: 10px;
}
.topics .box .details .topicontent h2 {
    margin: 0;
    padding: 0;
    font-size: 10px;
}
.topics .box .details .topicontent p {
    font-size: 10px;
    margin: 10px 0 0;
    letter-spacing: 0.05em;
    line-height: 1.5;
    padding: 0;
}
.holder {
    margin-top: 40vh;
    margin-left: 20px;
    position: fixed;
    transform: rotate(0deg);
    transition: 1s;
}
.holder:hover {
    transform: rotate(360deg);
}
#start {
    position: absolute;
    transform: scaleY(1);
}
#stop {
    position: relative;
    transform: scaleX(0);
}
/* Page Content End */

/* Page Footer Start */
footer {
    margin: 10px;
    margin-top: 50px;
    text-align: center;
}
footer a {
    text-decoration: none;
    color: inherit;
}
small {
    margin: 10px;
    margin-bottom: 5px;
    padding: 50px;
    padding-top: 0px;
    padding-bottom: 0px;
    background-color: rgb(37, 36, 36);
    color: yellow;
    border-radius: 20px;
    border: 1px solid red;
    /*box-shadow: 0px 0px 10px red;*/
}
small:hover {
    border: 1px solid yellow;
    color: white;
    /*box-shadow: 0px 0px 10px yellow;*/
    cursor: default;
}
/* Page Footer End */

